--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "api for workout-tracker web application",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx nodemon server/server.js -w server"
   },
   "repository": {
     "type": "git",
