--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/kimwoodfield/workout-tracker-api#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
