--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
