--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "npx nodemon server/server.js -w server",
-    "start": "npx nodemon server/server.js -w server"
+    "start": "npx nodemon server/server.js -w server",
+    "postinstall": "ng build"
   },
   "repository": {
     "type": "git",
