--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "jest": "^27.0.3",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
