--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "api for workout-tracker web application",
   "main": "server.js",
   "scripts": {
-    "dev": "npx nodemon server/server.js -w server",
-    "start": "npx nodemon server/server.js -w server",
+    "dev": "npx nodemon server/root.js -w server",
+    "start": "npx nodemon server/root.js -w server",
     "test": "jest --detectOpenHandles --forceExit",
     "test:watch": "jest --watch"
   },
